Reworked triton-start boostrap into an autopilot pattern health check
Much like MySQL, we can't do any setup of Couchbase unless it's running.
The first health check of a node will init the node, and the first health
check of the cluster will init the cluster as well. We'll use Consul to
coordinate locking of the cluster bootstrap.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,7 @@ couchbase:
     ports:
         - 8091
         - 8092
-    environment:
-        - CONSUL
-        - COUCHBASE_USER
-        - COUCHBASE_PASS
+    env_file: _env
     labels:
       - triton.cns.services=couchbase
 
